--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,19 +1,23 @@
-<%= form_with(model: article, local: true) do |form| %>
-<%= form_for @article, url: articles_path do |form| %>
-  <% if articles.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
 
-      <ul>
-      <% articles.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<% if @article.errors.any? %>
+<h2> the following error prevented the article form getting created</h2>
+<ul>
+<%= @article.errors.full_messages.each do |msg| %>
+<li><%= msg %></li>
+<% end %>
+</ul>
+<% end %>
+<%= form_for @article do |f| %>
+<p>
+  <%= f.label :tittle %></br>
+  <%= f.text_field :tittle %></p>
+  <p>
+  <%= f.label :description %></br>
+  <%= f.text_area :description %>
+</p>
+<p>
+  <%= f.submit %>
+</p>
+<% end %>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
-<% end %>
+<%= link_to "Back to article", articles_path %>
