--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Article</h1>
-
-<%= render 'form', article: @article %>
-
-<%= link_to 'Back', articles_path %>
+<h1>create an article</h1>
+<%= render "form"%>
+# form_for @article do |f|
+#f.label :tittle %>
+#f.text_field :tittle %> 
