--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,6 @@
-<h1> hi</h1>
+<h1>Welcome to <%= @user.username %>'s page</h1>
+
+<%= gravatar_for @user,size:150 %>
+
+<h4 align ="center"><%= @user.username %>'s articles </h4>
+<%= render 'articles/article', obj: @user.articles %>
