--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,11 +2,6 @@
 
 <h1>Articles</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
+<%= will_paginate %>
 <%= render 'article', obj: @articles %>
+<%= will_paginate %>
