--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1> All alpha-bloggers</h1>
-
+<%= will_paginate %>
 <% @users.each do |user| %>
 <ul><li>
 <%= link_to gravatar_for(user), user_path(user)%>
@@ -9,5 +9,5 @@
 </li>
 <small>
 <%= pluralize(user.articles.count, "article") if user.articles %> </small></li>
-</ul>
+</ul><%= will_paginate %>
 <% end %>
