--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -4,7 +4,7 @@
   <small> created_by: <%= article.user.username if article.user %>
     <%= time_ago_in_words(article.created_at) %> ago,
     last updated: <%= time_ago_in_words(article.updated_at) %> ago </small>
-    <% if logged_in? && current_user == article.user %>
+    <% if logged_in? && (current_user == article.user || current_user.admin?)%>
     <tr>
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
